force-app/main/default/objects/Permit__c/fields/DateOfApproval__c.field-meta.xml
<CustomField>
    <fullName>DateOfApproval__c</fullName>
    <label>Date of Approval</label>
    <type>Date</type>
</CustomField>