force-app/main/default/objects/Permit__c/fields/DateOfSubmission__c.field-meta.xml
<CustomField>
    <fullName>DateOfSubmission__c</fullName>
    <label>Date of Submission</label>
    <type>Date</type>
</CustomField>