force-app/main/default/objects/Permit__c/fields/NameOfPermissionEditor__c.field-meta.xml
<CustomField>
    <fullName>NameOfPermissionEditor__c</fullName>
    <label>Name of  Permission Editor</label>
    <length>30</length>
    <type>Text</type>
</CustomField>