force-app/main/default/objects/Permit__c/fields/NumOfFloors__c.field-meta.xml
<CustomField>
    <fullName>NumOfFloors__c</fullName>
    <label>Num of Floors</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>