force-app/main/default/objects/Permit__c/fields/PermissionNum__c.field-meta.xml
<CustomField>
    <fullName>PermissionNum__c</fullName>
    <label>Permission Num</label>
    <length>30</length>
    <type>Text</type>
</CustomField>