force-app/main/default/objects/Permit__c/fields/TheApplierIsSignedOnThePpermission__c.field-meta.xml
<CustomField>
    <fullName>TheApplierIsSignedOnThePpermission__c</fullName>
    <label>The Applier is Signed on the permission?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>